# CeleX5Helper

./: .gitignore  CMakeLists.txt  README.md  gitignore  scpHelper.sh
include/: RecordEventData-Stereo.hpp  RecordEventData.hpp  SensorDataObserver.hpp  SocketHelper.hpp  bin2txt.hpp  comment.hpp  fileHelper.hpp  imshowHelper.hpp  thread.hpp
include/celex5/: celex5.h
python/: csv2txt.py  deleteFiles.py  getTestData.py  showImage.py
src/: RecordEventData-Stereo.cpp  RecordEventData.cpp  SensorDataObserver.cpp  SocketHelper.cpp  bin2txt.cpp  fileHelper.cpp  imshowHelper.cpp  main-Master.cpp  main-Slave.cpp  main-Stereo.cpp  main.cpp  test-Master.cpp  test-Slave.cpp  thread.cpp
src/test/: CMakeCache.txt  CMakeLists.txt  CivilNet.cpp  Makefile  cmake_install.cmake  gemfield.cpp  py.py  py2.py  py2cpp.cpp  py2cpp.h
